# openfactory-core

./: .dockerignore  .readthedocs.yml  Dockerfile  MANIFEST.in  README.md  init_openfactory_cluster.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: asset_forwarder.yml  asset_router.yml  bleeding_edge.yml  kafka_mtc_producer.yml  lint.yml  metrics_registry.yml  mtc_agent.yml  ofa_cli.yml  opcua_producer.yml  opcua_supervisor.yml  pr-checks.yml  test_coverage.yml  unittests.yml
Kafka-Cluster/: README.md  docker-compose.yml
Kafka-Cluster/Monitoring/: README.md  docker-compose.yml
connectors/: README.md
connectors/MTConnect/: Dockerfile  README.md  kafka_producer.py
connectors/OPCUA/: Dockerfile  README.md  opcua_producer.py
docs/: MANIFESTO.md  README.txt  about.rst  architecture.rst  conf.py  guide.rst  index.rst
docs/about/: who_we_are.md
docs/api/: index.rst
docs/api/apps/: index.rst  ofa_attributes.rst  ofa_fastapi_app.rst  ofa_flask_app.rst  ofa_method.rst
docs/api/assets/: assets.rst  assets_base.rst  assets_uns.rst  assets_utils.rst  index.rst
docs/api/connectors/: connector_base.rst  index.rst  mtc_connector.rst  opcua_connector.rst  shdr_connector.rst
docs/api/fanoutlayer/: assetforwarder.rst  assetforwarder_metrics.rst  index.rst  nats_cluster.rst
docs/api/filelayer/: backend.rst  index.rst  local_backend.rst  nfs_backend.rst
docs/api/kafka/: asset_producer.rst
docs/api/logging/: backends.rst  index.rst  logger.rst
docs/api/monitoring/: index.rst  registry.rst  utils.rst
docs/api/openfactory/: openfactory.rst  openfactory_cluster.rst  openfactory_manager.rst
docs/api/schemas/: commands.rst  common.rst  connectors.mtconnect.rst  connectors.opcua.rst  connectors.rst  connectors.shdr.rst  connectors.types.rst  index.rst  storage.base.rst  storage.local_backend.rst  storage.nfs_backend.rst  storage.rst  storage.storage.rst  storage.types.rst  supervisors.rst
docs/architecture/: ofa_architecture.md  ofa_event_sourced.md  ofa_glossary.md  ofa_overview.md  ofa_responsability_boundaries.md
docs/guide/: applications.rst
docs/guide/applications/: definition.rst
openfactory/: __init__.py  ofacli.py  openfactory.py  openfactory_cluster.py  openfactory_deploy_strategy.py  openfactory_manager.py  setup_logging.py
openfactory/apps/: __init__.py  attributefield.py  decorators.py  ofa_fastapi_app.py  ofa_flask_app.py  ofaapp.py
openfactory/apps/supervisor/: Dockerfile.opcuasupervisor  base_supervisor.py  docker-compose.yml  opcua_supervisor_package.py  opcuasupervisor.py
openfactory/assets/: asset_base.py  asset_class.py  asset_uns_class.py  utils.py
openfactory/assets/utils/: __init__.py  assetattribute.py  async_loop.py  get_nats_cluster.py  nats_subscriber.py  time_methods.py
openfactory/config/: __init__.py  openfactory.yml
openfactory/connectors/: __init__.py  base_connector.py  registry.py
openfactory/connectors/mtconnect/: mtc_connector.py  mtcagent_deployer.py
openfactory/connectors/opcua/: opcua_connector.py
openfactory/connectors/shdr/: shdr_connector.py
openfactory/docker/: docker_access_layer.py
openfactory/fanoutlayer/: Dockerfile  Dockerfile.asset_forwarder  Dockerfile.asset_router  README.md  __init__.py  docker-compose.override.yml  docker-compose.yml
openfactory/fanoutlayer/asset_forwarder/: app_asset_forwarder.yml  asset_forwarder.py  asset_forwarder_metrics.py  asset_forwarder_service.py  logger.py  nats_cluster.py  requirements.txt
openfactory/fanoutlayer/asset_router/: asset_router.py
openfactory/fanoutlayer/prometheus/: fan_out_layer_rules.yml
openfactory/fanoutlayer/src/: asset_forwarder.py
openfactory/fanoutlayer/utils/: hash_ring.py  parse_nats_clusters.py
openfactory/filelayer/: backend.py  local_backend.py  nfs_backend.py
openfactory/kafka/: asset_producer.py  case_insensitive_dict.py  ksql.py
openfactory/logging/: __init__.py  configure.py  formatters.py  loggers.py
openfactory/logging/backends/: loki.py  text.py
openfactory/monitoring/: utils.py
openfactory/monitoring/registry/: Dockerfile  app_prometheus_metrics_registry.yml
openfactory/ofa/: __init__.py  cli.py  ksql_setup.py
openfactory/ofa/app/: __init__.py  ls.py
openfactory/schemas/: apps.py  command_header.py  common.py  devices.py  infra.py  supervisors.py  uns.py
openfactory/utils/: __init__.py  assets.py  load_plugin.py
scripts/: README.md  bump_version.py  coverage_badge.py
tests/: README.md
tests/integration-tests/: test_deploy_devices.py  test_ksql.py
tests/openfactory/: test_ofacli.py  test_openfactory.py  test_openfactory_cluster.py  test_openfactory_deploy_strategy.py  test_openfactory_init.py  test_openfactorymanager.py
traefik/: README.md  configure_ubuntu_use_dns.md  configure_windows_use_dns.md  dns.md  docker-compose.traefik.swarm.yml  docker-compose.traefik.yml
(+150 files in other folders)
