[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openfactory"
version = "0.5.0"
dependencies = [
    # Core utilities
    "click>=8.3,<9.0",
    "rich>=14.1,<15.0",
    "pydantic>=2.11,<3.0",
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.1,<2.0",
    "uvloop>=0.21,<1.0",

    # Networking and protocols
    "asyncua>=1.1,<2.0",
    "confluent-kafka>=2.11,<3.0",
    "httpx[http2]>=0.28,<1.0",
    "paramiko>=4.0,<5.0",

    # Infrastructure / Integration
    "docker>=7.1,<8.0",
    "fsspec>=2025.9,<2026.0",
    "PyGithub>=2.8,<3.0",
    "nats-py>=2.11,<3.0",

    # Custom Git dependency (pinned to commit)
    "mtc2kafka @ git+https://github.com/rwuthric/python-mtc2kafka.git@03a99e32b0bd4d4929e9d81b753868fee88cfa4d",
]

[project.optional-dependencies]
dev = [
    "fastapi",
    "uvicorn[standard]",
    "prometheus-client",
    "flake8",
    "tomlkit",
]

docs = [
    "sphinx",
    "myst-parser",
    "pydata-sphinx-theme",
    "sphinx-autodoc-typehints",
    "sphinx-design",
    "sphinxcontrib.mermaid",
]

[tool.setuptools]
include-package-data = true 

[tool.setuptools.packages]
find = { where = ["."], include = ["openfactory", "openfactory.*"] }

[project.entry-points."openfactory.deployment_platforms"]
docker = "openfactory.openfactory_deploy_strategy:LocalDockerDeploymentStrategy"
swarm = "openfactory.openfactory_deploy_strategy:SwarmDeploymentStrategy"

[project.scripts]
ofa = "openfactory.ofacli:main"