[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openfactory"
version = "0.6.3"
dependencies = [
    # Core utilities
    "click>=8.4.1,<9.0",
    "rich>=15.0.0,<16.0",
    "pydantic>=2.13.4,<3.0",
    "pyyaml>=6.0.3,<7.0",
    "python-dotenv>=1.2.2,<2.0",

    # Networking and protocols
    "confluent-kafka>=2.14.2,<3.0",
    "httpx[http2]>=0.28.1,<1.0",
    "paramiko>=5.0.0,<6.0",

    # Infrastructure / Integration
    "docker>=7.1,<8.0",
    "fsspec>=2026.6.0,<2027.0",
    "PyGithub>=2.9.1,<3.0",
    "nats-py>=2.15.0,<3.0",

    # Custom Git dependency (pinned to commit)
    "mtc2kafka @ git+https://github.com/rwuthric/python-mtc2kafka.git@03a99e32b0bd4d4929e9d81b753868fee88cfa4d",

    # monitoring
    "prometheus-client>=0.25.0,<1.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.138.0,<1.0",
    "uvicorn[standard]>=0.49.0,<1.0"
]

flask = [
    "flask>=3.1.3,<4.0",
]

dev = [
    "flake8",
    "tomlkit",
    "psutil",
]

docs = [
    "sphinx==9.1.0",
    "myst-parser==5.1.0",
    "pydata-sphinx-theme==0.19.0",
    "sphinx-autodoc-typehints==3.11.0",
    "sphinx-design==0.7.0",
    "sphinxcontrib-mermaid==2.0.2",
]

[tool.setuptools]
include-package-data = true 

[tool.setuptools.packages]
find = { where = ["."], include = ["openfactory", "openfactory.*"] }

[project.entry-points."openfactory.deployment_platforms"]
docker = "openfactory.openfactory_deploy_strategy:LocalDockerDeploymentStrategy"
swarm = "openfactory.openfactory_deploy_strategy:SwarmDeploymentStrategy"

[project.scripts]
ofa = "openfactory.ofacli:main"